--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-venv/
+server/venv/
+server/src/__pycache__
 
 # Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
 
