--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -7,25 +7,39 @@ attrs==24.3.0
 certifi==2024.12.14
 click==8.1.8
 deprecation==2.1.0
+dnspython==2.7.0
+email_validator==2.2.0
 fastapi==0.115.6
+fastapi-cli==0.0.7
 frozenlist==1.5.0
 gotrue==2.11.1
 h11==0.14.0
 h2==4.1.0
 hpack==4.0.0
 httpcore==1.0.7
+httptools==0.6.4
 httpx==0.27.2
 hyperframe==6.0.1
 idna==3.10
+Jinja2==3.1.5
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
 multidict==6.1.0
 packaging==24.2
 postgrest==0.19.1
 propcache==0.2.1
 pydantic==2.10.5
 pydantic_core==2.27.2
+Pygments==2.19.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-multipart==0.0.20
+PyYAML==6.0.2
 realtime==2.1.0
+rich==13.9.4
+rich-toolkit==0.12.0
+shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
 starlette==0.41.3
@@ -33,7 +47,10 @@ storage3==0.11.0
 StrEnum==0.4.15
 supabase==2.11.0
 supafunc==0.9.0
+typer==0.15.1
 typing_extensions==4.12.2
 uvicorn==0.34.0
+uvloop==0.21.0
+watchfiles==1.0.4
 websockets==13.1
 yarl==1.18.3
